Fix for QScrollBar and QComboBox

--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
@@ -75,6 +75,12 @@ QScrollBar
 background: transparent;
 }
 
+QScrollBar::add-page:vertical,
+QScrollBar::sub-page:vertical
+{
+background-color: transparent;
+}
+
 QScrollBar::handle:vertical
 {
 background: #ff04101E; /*colorToken.button-primary*/
@@ -128,21 +134,17 @@ image: url(:/images/themed/light/spinbox_down_arrow.svg); /*replaceThemeToken*/
 /*
     QComboBox
 */
-QComboBox::item:selected[type="mega"]
-{
-background-color: #fff3f4f4; /*colorToken.surface-2*/
-}
-
-QComboBox::item[type="mega"]
-{
-background-color: #fffafafa; /*colorToken.surface-1*/;
-}
-
 QComboBox[type="mega"]
 {
 background-color: #ffFFFFFF; /*colorToken.page-background*/
 color: #ff333333; /*colorToken.text-primary*/
 border-color: #ff04101E; /*colorToken.button-outline*/
+}
+
+QComobBox:on[type="mega"]
+{
+padding-top:0px;
+padding-left:8px;
 }
 
 QComboBox:disabled[type="mega"]
@@ -171,12 +173,31 @@ QComboBox::drop-down:pressed[type="mega"]
 image: url(:/chevron-down_press);
 }
 
+QComboBox::item[type="mega"]
+{
+background-color: #fffafafa; /*colorToken.page-background*/;
+}
+
+/* For macOS hover */
+QComboBox::item:selected[type="mega"]
+{
+background-color: #fff3f4f4; /*colorToken.surface-1*/
+color: #ff333333; /*colorToken.text-primary*/
+padding:0px;
+outline:none;
+}
+
+/* For Windows hover */
 QComboBox[type="mega"] QAbstractItemView
 {
 border: 2px solid #ff04101E; /*colorToken.button-outline*/
-background-color:  #fffafafa; /*colorToken.surface-1*/
+background-color:  #FFFFFF; /*colorToken.page-background*/
+color: #ff333333; /*colorToken.text-primary*/
+selection-background-color: #fff3f4f4; /*colorToken.surface-1*/
+selection-color: #ff333333; /*colorToken.text-primary*/
+padding: 0px;
+outline: none;
 }
-
 /*
     QRadioButton
 */
